FolderCompactor doesn't commit the message summary file before making a backup
Categories
(MailNews Core :: General, defect)
Tracking
(thunderbird_esr128 fixed, thunderbird132 fixed)
People
(Reporter: darktrojan, Assigned: darktrojan)
Details
Attachments
(1 file)
48 bytes,
text/x-phabricator-request
|
corey
:
approval-comm-release+
corey
:
approval-comm-esr128+
|
Details | Review |
We could be backing up stale data.
Assignee | ||
Comment 1•4 months ago
|
||
Assignee | ||
Updated•4 months ago
|
Pushed by brendan@thunderbird.net:
https://hg.mozilla.org/comm-central/rev/3f74315e90d3
Commit message summary file before backing it up for compaction. r=darktrojan
Updated•4 months ago
|
Assignee | ||
Comment 3•3 months ago
|
||
Comment on attachment 9431173 [details]
Bug 1924927 - Commit message summary file before backing it up for compaction. r=#thunderbird-reviewers
[Approval Request Comment]
Regression caused by (bug #): bug 1890448 (probably)
User impact if declined: recently deleted messages could become undeleted if compact fails
Testing completed (on c-c, etc.): in 133.0b1
Risk to taking this patch (and alternatives if risky): very low
Comment 4•3 months ago
|
||
Comment on attachment 9431173 [details]
Bug 1924927 - Commit message summary file before backing it up for compaction. r=#thunderbird-reviewers
[Triage Comment]
Approved for esr128
Comment 5•3 months ago
|
||
bugherder uplift |
Thunderbird 128.4.2esr:
https://hg.mozilla.org/releases/comm-esr128/rev/43052c849f97
Comment 6•3 months ago
|
||
Hello,
Are there any specific STR that QA could perform in order to reproduce the faulty behaviour(crash) on an affected build and properly verify and confirm that it is fixed?
Comment 7•3 months ago
|
||
Comment on attachment 9431173 [details]
Bug 1924927 - Commit message summary file before backing it up for compaction. r=#thunderbird-reviewers
[Triage Comment]
Approved for release
Comment 8•3 months ago
|
||
bugherder uplift |
Thunderbird 132.0.1:
https://hg.mozilla.org/releases/comm-release/rev/c19955be3f91
Assignee | ||
Comment 9•3 months ago
|
||
(In reply to Vlad Lucaci, Thunderbird QA (:vlucaci) from comment #6)
Hello,
Are there any specific STR that QA could perform in order to reproduce the faulty behaviour(crash) on an affected build and properly verify and confirm that it is fixed?
No, this is a difficult thing to test without somehow causing compaction to fail in the middle and leave the backup file behind. I'm already convinced that it works.
Description
•