Bug 1924927 - Commit message summary file before backing it up for compaction. r=darktrojan

Differential Revision: https://phabricator.services.mozilla.com/D225751

--HG--
extra : amend_source : a57323572e688aabe7b6f6580721a30202227039